--- a/application/server/static/css/style.css
+++ b/application/server/static/css/style.css
@@ -3,9 +3,9 @@
   font-family: 'Oxygen';
   font-style: normal;
   font-weight: 300;
-  src: url("/fonts/oxygen/oxygen-v5-latin-300.eot");
+  src: url("../fonts/oxygen/oxygen-v5-latin-300.eot");
   /* IE9 Compat Modes */
-  src: local("Oxygen Light"), local("Oxygen-Light"), url("/fonts/oxygen/oxygen-v5-latin-300.eot?#iefix") format("embedded-opentype"), url("/fonts/oxygen/oxygen-v5-latin-300.woff2") format("woff2"), url("/fonts/oxygen/oxygen-v5-latin-300.woff") format("woff"), url("/fonts/oxygen/oxygen-v5-latin-300.ttf") format("truetype"), url("/fonts/oxygen/oxygen-v5-latin-300.svg#Oxygen") format("svg");
+  src: local("Oxygen Light"), local("Oxygen-Light"), url("../fonts/oxygen/oxygen-v5-latin-300.eot?#iefix") format("embedded-opentype"), url("../fonts/oxygen/oxygen-v5-latin-300.woff2") format("woff2"), url("../fonts/oxygen/oxygen-v5-latin-300.woff") format("woff"), url("../fonts/oxygen/oxygen-v5-latin-300.ttf") format("truetype"), url("../fonts/oxygen/oxygen-v5-latin-300.svg#Oxygen") format("svg");
   /* Legacy iOS */ }
 
 /* oxygen-regular - latin */
@@ -13,9 +13,9 @@
   font-family: 'Oxygen';
   font-style: normal;
   font-weight: 400;
-  src: url("/fonts/oxygen/oxygen-v5-latin-regular.eot");
+  src: url("../fonts/oxygen/oxygen-v5-latin-regular.eot");
   /* IE9 Compat Modes */
-  src: local("Oxygen"), local("Oxygen-Regular"), url("/fonts/oxygen/oxygen-v5-latin-regular.eot?#iefix") format("embedded-opentype"), url("/fonts/oxygen/oxygen-v5-latin-regular.woff2") format("woff2"), url("/fonts/oxygen/oxygen-v5-latin-regular.woff") format("woff"), url("/fonts/oxygen/oxygen-v5-latin-regular.ttf") format("truetype"), url("/fonts/oxygen/oxygen-v5-latin-regular.svg#Oxygen") format("svg");
+  src: local("Oxygen"), local("Oxygen-Regular"), url("../fonts/oxygen/oxygen-v5-latin-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/oxygen/oxygen-v5-latin-regular.woff2") format("woff2"), url("../fonts/oxygen/oxygen-v5-latin-regular.woff") format("woff"), url("../fonts/oxygen/oxygen-v5-latin-regular.ttf") format("truetype"), url("../fonts/oxygen/oxygen-v5-latin-regular.svg#Oxygen") format("svg");
   /* Legacy iOS */ }
 
 /* oxygen-700 - latin */
@@ -23,24 +23,24 @@
   font-family: 'Oxygen';
   font-style: normal;
   font-weight: 700;
-  src: url("/fonts/oxygen/oxygen-v5-latin-700.eot");
+  src: url("../fonts/oxygen/oxygen-v5-latin-700.eot");
   /* IE9 Compat Modes */
-  src: local("Oxygen Bold"), local("Oxygen-Bold"), url("/fonts/oxygen/oxygen-v5-latin-700.eot?#iefix") format("embedded-opentype"), url("/fonts/oxygen/oxygen-v5-latin-700.woff2") format("woff2"), url("/fonts/oxygen/oxygen-v5-latin-700.woff") format("woff"), url("/fonts/oxygen/oxygen-v5-latin-700.ttf") format("truetype"), url("/fonts/oxygen/oxygen-v5-latin-700.svg#Oxygen") format("svg");
+  src: local("Oxygen Bold"), local("Oxygen-Bold"), url("../fonts/oxygen/oxygen-v5-latin-700.eot?#iefix") format("embedded-opentype"), url("../fonts/oxygen/oxygen-v5-latin-700.woff2") format("woff2"), url("../fonts/oxygen/oxygen-v5-latin-700.woff") format("woff"), url("../fonts/oxygen/oxygen-v5-latin-700.ttf") format("truetype"), url("../fonts/oxygen/oxygen-v5-latin-700.svg#Oxygen") format("svg");
   /* Legacy iOS */ }
 
-/* line 46, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 46, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 * {
   box-sizing: border-box;
   font-family: "Avenir Next","Oxygen","Helvetica" !important; }
 
-/* line 51, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 51, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 body {
   background-color: white;
   height: 100vh;
   width: 100%;
   overflow: hidden; }
 
-/* line 58, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 58, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 .nano {
   line-height: 1.3em;
   font-size: 22px;
@@ -51,31 +51,31 @@ body {
   margin-top: 18px;
   height: calc(30% - 30px) !important; }
 
-/* line 70, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 70, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 .nano > .nano-content {
   width: 99%;
   margin: 0 auto; }
 
-/* line 71, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 71, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 .nano > .nano-pane {
   background: #888; }
 
-/* line 72, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 72, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 .nano > .nano-pane > .nano-slider {
   background: #111; }
 
-/* line 78, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 78, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 #charts {
   margin: 10px;
   margin-bottom: 0;
   height: calc(70% - 65px);
   min-width: 320px; }
 
-/* line 85, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 85, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 .container {
   height: 100vh; }
 
-/* line 89, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 89, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 .top-header {
   position: relative;
   height: 30px;
@@ -85,23 +85,23 @@ body {
   margin-top: 5px;
   margin-bottom: 5px;
   color: #2c3e50; }
-  /* line 100, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 100, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .top-header div {
     top: 5px;
     position: absolute;
     display: inline;
     height: 30px; }
-  /* line 107, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 107, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .top-header .heading {
     left: 5px;
     font-size: 1.4em;
     width: 40%; }
 
-/* line 114, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 114, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 #highcharts-0 > svg > text {
   visibility: hidden; }
 
-/* line 118, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 118, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 .log {
   cursor: pointer;
   background-color: slategray;
@@ -117,7 +117,7 @@ body {
   transition: all 0.2s ease-out;
   margin-top: 1px;
   margin-bottom: 6px; }
-  /* line 132, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 132, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .log.active {
     background-color: white;
     color: #2c3e50;
@@ -127,8 +127,24 @@ body {
         outline: none;*/
     border: 1px solid #ababab;
     box-shadow: -1px 1px #ababab, -2px 2px #ababab, -3px 3px #ababab, -4px 4px #ababab, -5px 5px #ababab; }
+  /* line 150, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
+  .log-transition {
+    transition: opacity 0.5s ease; }
+  /* line 153, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
+  .log-enter {
+    opacity: 0; }
+  /* line 156, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
+  .log-leave {
+    opacity: 0;
+    position: absolute;
+    /* important for removal move to work */ }
+  /* line 160, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
+  .log-move {
+    color: red;
+    transition: transform 0.5s cubic-bezier(0.55, 0, 0.1, 1);
+    /* applied when moving */ }
 
-/* line 152, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 168, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 .info-bar {
   position: absolute;
   bottom: 0px;
@@ -137,27 +153,27 @@ body {
   width: 96%;
   height: 40px;
   color: #2c3e50; }
-  /* line 162, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 178, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .info-bar div {
     position: absolute;
     height: 100%;
     display: inline; }
-  /* line 168, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 184, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .info-bar .transfer-total {
     width: 50%; }
-    /* line 170, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+    /* line 186, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
     .info-bar .transfer-total svg {
       width: 28px;
       position: absolute;
       top: 5px;
       left: 5px; }
-    /* line 177, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+    /* line 193, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
     .info-bar .transfer-total .rate {
       font-size: 1.1em;
       margin-left: 40px;
       margin-top: 4px;
       width: 70%; }
-    /* line 184, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+    /* line 200, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
     .info-bar .transfer-total .amount {
       visibility: hidden;
       position: absolute;
@@ -167,30 +183,30 @@ body {
       width: calc(50% - 40px);
       background-color: #2c3e50;
       border-radius: 5px; }
-  /* line 195, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 211, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .info-bar .up {
     top: 0;
     right: 0; }
-  /* line 199, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 215, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .info-bar .down {
     top: 0;
     right: 50%; }
 
-/* line 205, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 221, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 .app {
   position: absolute;
   top: 0;
   width: 100%;
   height: 100vh; }
 
-/* line 212, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+/* line 228, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
 .window-range-selector {
   position: absolute;
   top: 0;
   right: 3%;
   width: 180px;
   height: 40px; }
-  /* line 219, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 235, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .window-range-selector div {
     cursor: pointer;
     display: inline;
@@ -206,35 +222,35 @@ body {
     text-align: center;
     background-color: #6496c8;
     box-shadow: 0 5px #27496d; }
-    /* line 235, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+    /* line 251, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
     .window-range-selector div.active {
       background-color: #417cb8;
       box-shadow: 0 5px #27496d;
       transform: translateY(5px); }
-  /* line 242, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 258, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .window-range-selector div:hover {
     background-color: #417cb8; }
-  /* line 246, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 262, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .window-range-selector .state {
     left: 0; }
-    /* line 250, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+    /* line 266, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
     .window-range-selector .state svg {
       position: absolute;
       width: 90%;
       top: calc(5% + 5px);
       left: 5%; }
-  /* line 258, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 274, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .window-range-selector .divider {
     left: 40px;
     width: 20px;
     display: none; }
-  /* line 264, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 280, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .window-range-selector #range-0 {
     left: 60px; }
-  /* line 268, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 284, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .window-range-selector #range-5 {
     left: 100px; }
-  /* line 272, /Users/akshay/mnt/elementary/Documents/hogwatch/application/static/scss/style.scss */
+  /* line 288, /Users/akshay/Documents/Programming/python/bandwidth_monitor/application/server/static/scss/style.scss */
   .window-range-selector #range-30 {
     left: 140px; }
 
