--- a/application/server/static/scss/style.scss
+++ b/application/server/static/scss/style.scss
@@ -49,7 +49,7 @@ $header-height: 30px;
 }
 
 body {
-    background-color:white;
+    background-color:whitesmoke;
     height: 100vh;
     width: 100%;
     overflow: hidden;
@@ -80,6 +80,11 @@ body {
     margin-bottom: 0;
     height: calc(70% - 65px);
     min-width: 320px;
+    
+    div{
+        border-top-left-radius: 8px !important;
+        border-top-right-radius: 8px !important;
+    }
 }
 
 .container {
@@ -106,7 +111,7 @@ body {
     
     .heading{
         left: 5px;
-        font-size: 1.4em;
+        font-size: 1.2em;
         width: 40%;
     }
 }
@@ -116,6 +121,7 @@ body {
 }
 
 .log {
+    font-size: 0.7em;
     cursor: pointer;
     background-color: slategray;
     color: white;
@@ -193,28 +199,36 @@ body {
         .rate{
             font-size: 1.1em;
             margin-left: 40px;
-            margin-top: 4px;
+            margin-top: 6px;
             width: 70%;
         }
         
         .amount{
-                visibility: hidden;
+                color: grey;
+                text-align: right;
                 position: absolute;
                 height: 32px;
                 top:-5px;
-                right: 40px;
+                margin-top: 12px;
+                right: 5px;
                 width: calc(50% - 40px);
-                background-color: #2c3e50;
+               // background-color: #2c3e50;
                 border-radius: 5px;
             }
     }
     .up{
         top:0;
         right: 0;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+       background-color: cornsilk;
     }
     .down{
         top:0;
         right: 50%;
+        background-color: honeydew;
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
     }
 }
 
